# KR_6

./: .env  db.sqlite3  db2.sqlite3  pyproject.toml
blog/: activate.py  forms.py  models.py  tokens.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_count_view_alter_blogpost_image.py
blog/templates/: activate_complete.html
blog/templates/blog/: home.html  login.html
blog/templates/blog/interface_manager/: view_list_users.html  view_mailings.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  task.py  urls.py  views.py
mailing/migrations/: 0001_initial.py
mailing/templates/: base.html
mailing/templates/mailing/: attempt_list.html  index.html
mailing/templates/mailing/CRUD_Clients/: create_client.html  read_client.html  update_client.html
mailing/templates/mailing/CRUD_Message/: create_message.html  read_message.html  update_message.html
mailing/templates/mailing/CRUD_mailing/: create_mailing.html  read_mailing.html  update_mailing.html
users/: activate.py  forms.py  tokens.py  urls.py
users/templates/users/: activate_email.html  edit_user.html  sing_up.html  user_profile.html  view_list_users.html
