[tool.poetry]
name = "lesson3012"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
celery = "^5.4.0"
apscheduler = "^3.11.0"
django-debug-toolbar = "^5.0.1"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
